Added classes to div elements for easier CSS manipulation

--- a/sources/calculator.html
+++ b/sources/calculator.html
@@ -4,36 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Premium Calculator</title>
+    <link rel="stylesheet" href="style_base.css">
 </head>
 <body>
     <div class="calculator-area">
         <div class="output-area"></div>
-        <button input-number>7</button>
-        <button input-number>8</button>
-        <button input-number>9</button>
+        <button input-number class="number">7</button>
+        <button input-number class="number">8</button>
+        <button input-number class="number">9</button>
         <button input-operation>log</button>
         <button input-operation>abs</button>
         <button input-operation>...</button>
-        <button clear>C</button>
-        <button delete>DEL</button>
-        <button input-number>4</button>
-        <button input-number>5</button>
-        <button input-number>6</button>
+        <button clear class="c">C</button>
+        <button delete class="del">DEL</button>
+        <button input-number class="number">4</button>
+        <button input-number class="number">5</button>
+        <button input-number class="number">6</button>
         <button input-constant>&#120587;</button>
         <button input-operation>cos</button>
         <button input-operation>...</button>
         <button input-operation>/</button>
         <button input-operation>+</button>
-        <button input-number>1</button>
-        <button input-number>2</button>
-        <button input-number>3</button>
+        <button input-number class="number">1</button>
+        <button input-number class="number">2</button>
+        <button input-number class="number">3</button>
         <button input-operation>sin</button>
         <button input-operation>x&#x02B8;</button>
         <button input-operation>...</button>
         <button input-operation>-</button>
         <button equals class="span">=</button>
         <button input-operation>+/-</button>
-        <button input-number>0</button>
+        <button input-number class="number">0</button>
         <button input-number>.</button>
         <button input-operation>tan</button>
         <button input-operation>&#185;&#8260;&#8339;</button>
