added color select to calculator.html and style_base.css

--- a/sources/calculator.html
+++ b/sources/calculator.html
@@ -40,6 +40,13 @@
         <button input-operation>&#185;&#8260;&#8339;</button>
         <button input-operation>sqrt</button>
         <button input-operation>*</button>
+        <div class="select-container">
+            <select class="color-select">
+                <option value="normal" selected="selected">Normal colors</option>
+                <option value="dark">Dark mode</option>
+                <option value="colorblind">Colorblind mode</option>
+            </select>
+        </div>
     </div>
 </body>
 </html>
