changed the value of delete button in calculator.html

--- a/sources/calculator.html
+++ b/sources/calculator.html
@@ -18,7 +18,7 @@
         <button input-operation class="button" value="abs">abs</button>
         <button input-operation class="button" value="...">...</button>
         <button clear class="button c" value="clear">C</button>
-        <button delete class="button del" value="del">DEL</button>
+        <button delete class="button del" value="delete">DEL</button>
         <button input-number class="button number" value="4">4</button>
         <button input-number class="button number" value="5">5</button>
         <button input-number class="button number" value="6">6</button>
