--- a/sources/calculator.html
+++ b/sources/calculator.html
@@ -5,18 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Premium Calculator</title>
     <link id="current-style" rel="stylesheet" href="style_base.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="script.js" defer></script>
 </head>
 <body>
     <div class="calculator-area">
-        <div id="output" class="output-area"></div>
+        <div output-area class="output-area"></div>
         <button input-number class="button number" value="7">7</button>
         <button input-number class="button number" value="8">8</button>
         <button input-number class="button number" value="9">9</button>
         <button input-operation class="button" value="log">log</button>
         <button input-operation class="button" value="abs">abs</button>
-        <button input-operation class="button" value="...">...</button>
+        <button input-operation class="button" value="(">(</button>
         <button clear class="button c" value="clear">C</button>
         <button delete class="button del" value="delete">DEL</button>
         <button input-number class="button number" value="4">4</button>
@@ -24,20 +23,20 @@
         <button input-number class="button number" value="6">6</button>
         <button input-constant class="button" value="pi">&#120587;</button>
         <button input-operation class="button" value="cos">cos</button>
-        <button input-operation class="button" value="...">...</button>
+        <button input-operation class="button" value=")">)</button>
         <button input-operation class="button" value="/">/</button>
         <button input-operation class="button" value="+">+</button>
         <button input-number class="button number" value="1">1</button>
         <button input-number class="button number" value="2">2</button>
         <button input-number class="button number" value="3">3</button>
         <button input-operation class="button" value="sin">sin</button>
-        <button input-operation class="button" value="x^y">x&#x02B8;</button>
+        <button input-operation class="button" value="^">x&#x02B8;</button>
         <button input-operation class="button" value="...">...</button>
         <button input-operation class="button" value="-">-</button>
-        <button equals class="button span" value="=">=</button>
+        <button equals class="button span" value="equals">=</button>
         <button input-operation class="button" value="+/-">+/-</button>
         <button input-number class="button number" value="0">0</button>
-        <button input-number class="button" value=".">.</button>
+        <button input-number class="button" value="point">.</button>
         <button input-operation class="button" value="tan">tan</button>
         <button input-operation class="button" value="1/x">&#185;&#8260;&#8339;</button>
         <button input-operation class="button" value="sqrt">sqrt</button>
