solved problem with decimal point and with delete button in script.js

--- a/sources/calculator.html
+++ b/sources/calculator.html
@@ -36,7 +36,7 @@
         <button equals class="button span" value="equals">=</button>
         <button input-operation class="button" value="+/-">+/-</button>
         <button input-number class="button number" value="0">0</button>
-        <button input-number class="button" value="point">.</button>
+        <button input-operation class="button" value="point">.</button>
         <button input-operation class="button" value="tan">tan</button>
         <button input-operation class="button" value="1/x">&#185;&#8260;&#8339;</button>
         <button input-operation class="button" value="sqrt">sqrt</button>
