added calculation history element to calculatot.html

--- a/sources/calculator.html
+++ b/sources/calculator.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <div class="calculator-area">
+        <div id="calculation-history">
+            <span id="calchist-title">Calculation history</span>
+            <div id="history-list">
+            </div>
+        </div>    
         <div output-area class="output-area"></div>
         <button input-number class="button number" value="7">7</button>
         <button input-number class="button number" value="8">8</button>
