--- a/sources/calculator.html
+++ b/sources/calculator.html
@@ -18,34 +18,34 @@
         <button input-number class="number" value="7">7</button>
         <button input-number class="number" value="8">8</button>
         <button input-number class="number" value="9">9</button>
-        <button input-operation value="log">log</button>
-        <button input-operation value="abs">abs</button>
+        <button input-constant value="pi">&#120587;</button>
         <button input-operation value="(">(</button>
+        <button input-operation value=")">)</button>
         <button clear class="c" value="clear">C</button>
         <button delete class="del" value="delete">DEL</button>
         <button input-number class="number" value="4">4</button>
         <button input-number class="number" value="5">5</button>
         <button input-number class="number" value="6">6</button>
-        <button input-constant value="pi">&#120587;</button>
-        <button input-operation value="cos">cos</button>
-        <button input-operation value=")">)</button>
-        <button input-operation value="/">/</button>
-        <button input-operation value="+">+</button>
+        <button input-operation value="sin">sin</button>
+        <button input-operation value="log">log</button>
+        <button input-operation value="1/x">&#185;&#8260;&#8339;</button>
+        <button input-operation value="^">x&#x02B8;</button>
+        <button ans value="ans">ANS</button>
         <button input-number class="number" value="1">1</button>
         <button input-number class="number" value="2">2</button>
         <button input-number class="number" value="3">3</button>
-        <button input-operation value="sin">sin</button>
-        <button input-operation value="^">x&#x02B8;</button>
-        <button input-operation value="...">...</button>
-        <button input-operation value="-">-</button>
+        <button input-operation value="cos">cos</button>
+        <button input-operation value="abs">abs</button>
+        <button input-operation value="*">*</button>
+        <button input-operation value="/">/</button>
         <button equals class="span" value="equals">=</button>
         <button input-operation value="+/-">+/-</button>
         <button input-number class="number" value="0">0</button>
         <button input-operation value="point">.</button>
         <button input-operation value="tan">tan</button>
-        <button input-operation value="1/x">&#185;&#8260;&#8339;</button>
         <button input-operation value="sqrt">sqrt</button>
-        <button input-operation value="*">*</button>
+        <button input-operation value="+">+</button>
+        <button input-operation value="-">-</button>
         <div class="select-container">
             <select pick-style class="color-select">
                 <option value="normal" selected="selected">Normal colors</option>
